# psql-to-models

./: .gitignore  README.md  note.md  pyproject.toml
example/: README.md  models_alchemy.py  models_pydantic.py
src/psql-to-models/: __main__.py  column.py  table.py  types.py
